--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
-h1 {
-    font-family: "Times New Roman";
-}
+// h1 {
+//     font-family: "Times New Roman";
+// }
 
 body {
     background-image: url("/assets/images/small-tacos.png");
