--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,12 +4,15 @@
     <br/>
 
     <div class="container-fluid text-center">
-        <div class="d-flex justify-content-center align-items-center">
-            <h1 class="mt-5 custom-shadow card col-3 custom-card-title1">
-                Welcome to Taco Cloud. <br/>
-                Click below to make your taco!
-            </h1>
+        <div class="d-flex justify-content-center align-items-center mt-5 custom-custom">
+            <div class="card text-black bg-warning mb-3 custom-shadow" style="max-width: 30rem;">
+              <div class="card-body">
+                <h4 class="card-title">Welcome to Taco Cloud</h4>
+                <p class="card-text">Click below to make your taco! Choose your ingredients and design your perfect taco.</p>
+              </div>
+            </div>
         </div>
+          
 
         <br/>
         <br/>
@@ -19,8 +22,10 @@
             <div class="row">
                 <div class="col-3">
                     <a class="nav-link" [routerLink]="['/login']">
-                        <div class="big-card-1 custom-shadow d-flex justify-content-center align-items-center">
-                            Login
+                        <div class="card bg-light mb-3 custom-shadow" style="max-width: 40rem;">
+                            <div class="card-body d-flex justify-content-center align-items-center">
+                                <h4 class="card-title">Login</h4>
+                            </div>
                         </div>
                     </a>
                 </div>
@@ -33,8 +38,10 @@
                 <div class="col-1"></div>
                 <div class="col-3">
                     <a class="nav-link" [routerLink]="['/register']">
-                        <div class="big-card-2 custom-shadow d-flex justify-content-center align-items-center">
-                            Register
+                        <div class="card bg-light mb-3 custom-shadow" style="max-width: 40rem; max-height: 50rem;">
+                            <div class="card-body d-flex justify-content-center align-items-center">
+                                <h4 class="card-title">Register</h4>
+                            </div>
                         </div>
                     </a>
                 </div>
