--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,29 +1,37 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light custom-navbar">
-    <a class="navbar-brand navbar-title" href="#">Taco Cloud</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/']">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/design/taco']">Design a taco!</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/order']">Order your tacos!</a>
-            </li>
-            
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/tacos/past']">See a list of past tacos!</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/login']">Login!</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/register']">Register!</a>
-            </li>
-        </ul>
+<nav class="navbar navbar-expand-lg bg-primary custom-shadow" data-bs-theme="dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Taco Cloud</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor03">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/']">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/design/taco']">Design a taco!</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/order']">Order your tacos!</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/tacos/past']">See a list of past tacos!</a>
+                </li>
+                <li class="nav-item" *ngIf="!loginService.isLoggedIn()">
+                    <a class="nav-link" [routerLink]="['/login']">Login!</a>
+                </li>
+                <li class="nav-item" *ngIf="!loginService.isLoggedIn()">
+                    <a class="nav-link" [routerLink]="['/register']">Register!</a>
+                </li>
+                <li class="nav-item" *ngIf="loginService.isLoggedIn()">
+                    <a class="nav-link" href="#" (click)="onLogout(); $event.preventDefault()">Logout</a>
+                </li>
+            </ul>
+            <!-- <form class="d-flex">
+                <input class="form-control me-sm-2" type="search" placeholder="Search">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form> -->
+        </div>
     </div>
 </nav>
