the project is almost done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,9 @@
 </a>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+
+<footer class="footer">
+    <p class="footer-message">Copyright © 2024 Taco Bytes. All rights reserved</p>
+
+    <p class="footer-email">Contact email: taco_bytes@gmail.com</p>
+</footer>
