--- a/src/app/components/design-taco/design-taco.component.html
+++ b/src/app/components/design-taco/design-taco.component.html
@@ -3,54 +3,88 @@
     <br/>
     <br/>
     <br/>
-    <div class="container mt-4 content-container">
-        <div class="card bg-light custom-shadow">
-          <div class="card-body">
-              <h4 class="card-title">Design a taco</h4>
-          </div>
+    <div class="row">
+      <div class="col-md-3 ps-5 pe-5 custom-top-margin">
+        <div class="card bg-light custom-shadow card-order">
+            <div class="card-body">
+                <h4 class="card-title-custom">Jump to your order by clicking below</h4>
+            </div>
         </div>
         <br/>
         <br/>
-        <div *ngFor="let key of ingredientsByType | keyvalue">
-          <h3>{{ key.key }}</h3>
-          <ul class="no-bullets">
-            <li *ngFor="let ingredient of key.value">
-              <label class="form-check-label">
-                <input class="form-check-input" type="checkbox" [value]="ingredient" (change)="toggleIngredient($event, ingredient)">
-                {{ ingredient.name }} {{ ingredient.price }}$
-              </label>
-            </li>
-            <br/>
-          </ul>
-          </div>
+        <a class="nav-link" [routerLink]="['/order']">
+            <img class="img-fluid img-responsive rounded-circle custom-shadow" src="assets/images/make-taco-jump-to-order.jpg"/>
+        </a>
+      </div>
+      <div class="col-md-1">
 
-
-          <div *ngIf="errorMessageIngredients" class="alert alert-danger custom-alert">{{ errorMessageIngredients }} <br/> </div>
-
-          <br/>
-
-          <div *ngIf="errorMessageName" class="alert alert-danger custom-alert">{{ errorMessageName }} <br/> </div>
-
-          <br/>
-          <br/>
-          
-          <div class="card bg-light custom-card">
-            <div class="card-body">
-                <h4 class="card-title">Name your taco</h4>
+      </div>
+      <div class="col-md-4 custom-top-margin-main">
+        <div class="container mt-4 content-container">
+            <div class="card bg-light">
+              <div class="card-body">
+                  <h4 class="card-title">Design a taco</h4>
+              </div>
             </div>
+            <br/>
+            <br/>
+            <div *ngFor="let key of ingredientsByType | keyvalue">
+              <h3>{{ key.key }}</h3>
+              <ul class="no-bullets">
+                <li *ngFor="let ingredient of key.value">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="checkbox" [value]="ingredient" (change)="toggleIngredient($event, ingredient)">
+                    {{ ingredient.name }} {{ ingredient.price }}$
+                  </label>
+                </li>
+                <br/>
+              </ul>
+              </div>
+
+
+              <div *ngIf="errorMessageIngredients" class="alert alert-danger custom-alert">{{ errorMessageIngredients }} <br/> </div>
+
+              <br/>
+
+              <div *ngIf="errorMessageName" class="alert alert-danger custom-alert">{{ errorMessageName }} <br/> </div>
+
+              <br/>
+              <br/>
+              
+              <div class="card bg-light custom-card">
+                <div class="card-body">
+                    <h4 class="card-title">Name your taco</h4>
+                </div>
+              </div>
+              <br/>
+
+              <br/>
+              <input class="form-control" [(ngModel)]="taco.name">
+              <br/>
+              <br/>
+              <button (click)="createTaco()" class="btn btn-primary custom-button">Add your taco to the cart!</button>
+              <br/>
+              <br/>
+              <button (click)="redirectToOrderWindow('/order')" class="btn btn-primary custom-button">Place your order!</button>
+              <br/>
+              <br/>
+          </div>
+        </div>
+        <div class="col-md-1">
+
+        </div>
+        <div class="col-md-3 custom-top-margin custom-bottom-margin ps-5 pe-5">
+          <div class="card bg-light custom-shadow card-drink">
+              <div class="card-body">
+                  <h4 class="card-title-custom">Order some drinks by clicking below</h4>
+              </div>
           </div>
           <br/>
-
           <br/>
-          <input class="form-control" [(ngModel)]="taco.name">
-          <br/>
-          <br/>
-          <button (click)="createTaco()" class="btn btn-primary custom-button">Add your taco to the cart!</button>
-          <br/>
-          <br/>
-          <button (click)="redirectToOrderWindow('/order')" class="btn btn-primary custom-button">Place your order!</button>
-          <br/>
-          <br/>
+          <a class="nav-link" [routerLink]="['/drinks/selection']">
+              <img class="img-fluid img-responsive rounded-circle custom-shadow custom-image-secondary" src="assets/images/make-taco-jump-to-drinks.jpg"/>
+          </a>
+      </div>
       </div>
       <br/>
       <br/>
