--- a/src/app/components/design-taco/design-taco.component.scss
+++ b/src/app/components/design-taco/design-taco.component.scss
@@ -99,3 +99,40 @@ input[type="checkbox"] {
 .form-check-input {
   
 }
+
+.card-order {
+  width: 50%;
+  margin: 0 auto;
+  background: linear-gradient(to bottom, rgb(247, 180, 104), #e0c57b);
+  border-color: rgb(196, 182, 135);
+  border-width: 1mm;
+  border-style: solid;
+  min-width: 100px;
+}
+
+.custom-shadow {
+  box-shadow: 20px 20px 30px 10px rgba(0,0,0,0.75);
+}
+
+.custom-top-margin {
+  margin-top: 200px;
+}
+
+.custom-top-margin-main {
+  margin-top: 100px;
+}
+
+.card-title-custom {
+  font-size: 18px;
+  text-align: center;
+}
+
+.card-drink {
+  width: 50%;
+  margin: 0 auto;
+  background: linear-gradient(to bottom, rgb(187, 185, 185), #a3a3a3);
+  border-color: rgb(141, 142, 145);
+  border-width: 1mm;
+  border-style: solid;
+  min-width: 100px;
+}
