--- a/src/app/components/order/order.component.scss
+++ b/src/app/components/order/order.component.scss
@@ -1,77 +1,121 @@
 .order-container {
-    width: 100%; /* Set to the desired width, or keep at 100% for full width */
-    max-width: 600px; /* Increase this value to make the form wider */
-    margin-top: 150px; /* Adjust this value if you want to change the space from the top */
-    padding: 30px; /* Increase padding for a larger overall form */
-    text-align: center;
-    font-size: 1.25rem; /* Increase font size for labels and text */
-    box-shadow: 20px 20px 30px 10px rgba(0,0,0,0.75);
-    border-radius: 100px;
-    display: flex; /* Add flex display */
-    flex-direction: column; /* Stack children vertically */
-    align-items: center; /* Center children horizontally */
-    background: linear-gradient(to bottom, rgb(255, 147, 97), #ffffff);
-    border-color: rgb(255, 189, 159);
-    border-width: 1cm;
-    border-style: solid;
-  }
+  // width: 100%; /* Set to the desired width, or keep at 100% for full width */
+  // max-width: 600px; /* Increase this value to make the form wider */
+  margin-top: 150px; /* Adjust this value if you want to change the space from the top */
+  padding: 30px; /* Increase padding for a larger overall form */
+  text-align: center;
+  font-size: 1.25rem; /* Increase font size for labels and text */
+  box-shadow: 20px 20px 30px 10px rgba(0,0,0,0.75);
+  border-radius: 100px;
+  display: flex; /* Add flex display */
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Center children horizontally */
+  background: linear-gradient(to bottom, rgb(255, 147, 97), #ffffff);
+  border-color: rgb(255, 189, 159);
+  border-width: 1cm;
+  border-style: solid;
+}
 
-  body {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start; /* Align items to the top of the viewport */
-    align-items: center; /* Keep horizontal centering */
-    color: black;
-    font-family: sans-serif;
-  }
+body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; /* Align items to the top of the viewport */
+  align-items: center; /* Keep horizontal centering */
+  color: black;
+  font-family: sans-serif;
+}
 
-  .no-bullets {
-    list-style: none;
-    padding-left: 0; /* Removes padding if it exists */
-  }
+.no-bullets {
+  list-style: none;
+  padding-left: 0; /* Removes padding if it exists */
+}
 
-  .card {
-    background-image: linear-gradient(to bottom, #ffffe0, #ffffff); /* Gradient from light yellow to white */
-    width: 25rem; /* Set a specific width */
-    //height: 6.5rem;
-    // box-shadow: 20px 20px 30px 10px rgba(0,0,0,0.75);
-    color: black;
-    border-radius: 70px;
-    background: linear-gradient(to bottom, #ffffff, rgb(255, 147, 97));
-    border-color: rgb(255, 189, 159);
-    border-width: 1mm;
-    border-style: solid;
-  }
+.card {
+  background-image: linear-gradient(to bottom, #ffffe0, #ffffff); /* Gradient from light yellow to white */
+  width: 25rem; /* Set a specific width */
+  //height: 6.5rem;
+  // box-shadow: 20px 20px 30px 10px rgba(0,0,0,0.75);
+  color: black;
+  border-radius: 70px;
+  background: linear-gradient(to bottom, #ffffff, rgb(255, 147, 97));
+  border-color: rgb(255, 189, 159);
+  border-width: 1mm;
+  border-style: solid;
+}
 
-  .total-cost-card {
-    background: linear-gradient(to bottom, #ffd900, rgb(245, 113, 52));
-    width: 50%; /* Adjust to desired width, percentage relative to parent */
-    margin: 0 auto; /* This will center the card within the .order-container */
-  }
+.total-cost-card {
+  background: linear-gradient(to bottom, #ffd900, rgb(245, 113, 52));
+  width: 50%; /* Adjust to desired width, percentage relative to parent */
+  margin: 0 auto; /* This will center the card within the .order-container */
+}
+
+.card-title-cost {
+  font-size: 20px;
+}
+
+.custom-input {
+  width: 70%;    
+  margin: 0;
+}
+
+.delete-btn {
+  background: linear-gradient(to bottom, orange, #dd7d7d);
+  color: black;
+}
+
+.place-order-btn {
+  color: black;
+  background-color: rgb(255, 147, 97);
+}
+
+.custom-alert {
+  width: 100%; /* Match the width of the form inputs */
+  max-width: 300px; /* Same as the custom-input max-width */
+  margin: 0 auto; /* Center the alert if it's smaller than the max-width */
+  background: rgb(255, 80, 80);
+}
+
+#card-number-element {
+  max-width: 380px;
+  min-width: 300px;
+}
+
+.card-taco {
+  width: 50%;
+  margin: 0 auto;
+  background: linear-gradient(to right, rgb(255, 255, 255), #504d3f);
+  border-color: rgb(112, 110, 103);
+  border-width: 1mm;
+  border-style: solid;
+  min-width: 100px;
+}
+
+.card-title-custom {
+  font-size: 18px;
+  text-align: center;
+}
+
+.custom-top-margin {
+  margin-top: 300px;
+}
+
+.custom-shadow {
+  box-shadow: 20px 20px 30px 10px rgba(0,0,0,0.75);
+}
+
+.card-drink {
+  width: 50%;
+  margin: 0 auto;
+  background: linear-gradient(to left, #e2d5d5, rgb(211, 75, 75));
+  border-color: rgb(238, 146, 140);
+  border-width: 1mm;
+  border-style: solid;
+  min-width: 100px;
+}
+
+.custom-bottom-margin {
+  margin-bottom: 100px;
+}
+
   
-  .card-title-cost {
-    font-size: 20px;
-  }
-
-  .custom-input {
-    width: 70%;    
-    margin: 0;
-  }
-
-  .delete-btn {
-    background: linear-gradient(to bottom, orange, #dd7d7d);
-    color: black;
-  }
-
-  .place-order-btn {
-    color: black;
-    background-color: rgb(255, 147, 97);
-  }
-
-  .custom-alert {
-    width: 100%; /* Match the width of the form inputs */
-    max-width: 300px; /* Same as the custom-input max-width */
-    margin: 0 auto; /* Center the alert if it's smaller than the max-width */
-    background: rgb(255, 80, 80);
-  }
