--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -36,7 +36,7 @@
                 <div class="col-md-4 custom-top-margin-main">
                     <div class="card bg-light custom-shadow card-order">
                         <div class="card-body">
-                            <h4 class="">Welcome to Taco Byes<br>Create your taco by pressing below</h4>
+                            <h4 class="">Welcome to Taco Bytes<br>Create your taco by pressing below</h4>
                         </div>
                     </div>
                     <br/>
