--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" [routerLink]="['/order']">Make your order happen</a>
                 </li>
                 <li class="nav-item" *ngIf="loginService.isAdmin()">
-                    <a class="nav-link" [routerLink]="['/login']">Search for a particular user</a>
+                    <a class="nav-link" [routerLink]="['/admin/users']">Search for a particular user</a>
                 </li>
                 <li class="nav-item" *ngIf="!loginService.isLoggedIn()">
                     <a class="nav-link" [routerLink]="['/login']">Login</a>
